--- a/angular7-portfolio/src/index.html
+++ b/angular7-portfolio/src/index.html
@@ -2,13 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Angular7Portfolio</title>
+  <title>Citlalli's Portfolio</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+   <!-- Custom fonts for this theme -->
+   <script src="https://kit.fontawesome.com/75740cd569.js"></script>
+   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+  
+   
+
 </head>
 <body>
   <app-root></app-root>
+  
+
+ 
+
+  
+
 </body>
 </html>
